@@ -10,8 +10,8 @@ NK_API struct nk_nine_slice
 nk_sub9slice_ptr(void *ptr, nk_ushort w, nk_ushort h, struct nk_rect rgn, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     i->handle.ptr = ptr;
     i->w = w; i->h = h;
     i->region[0] = (nk_ushort)rgn.x;
@@ -25,8 +25,8 @@ NK_API struct nk_nine_slice
 nk_sub9slice_id(int id, nk_ushort w, nk_ushort h, struct nk_rect rgn, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     i->handle.id = id;
     i->w = w; i->h = h;
     i->region[0] = (nk_ushort)rgn.x;
@@ -40,8 +40,8 @@ NK_API struct nk_nine_slice
 nk_sub9slice_handle(nk_handle handle, nk_ushort w, nk_ushort h, struct nk_rect rgn, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     i->handle = handle;
     i->w = w; i->h = h;
     i->region[0] = (nk_ushort)rgn.x;
@@ -55,8 +55,8 @@ NK_API struct nk_nine_slice
 nk_nine_slice_handle(nk_handle handle, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     i->handle = handle;
     i->w = 0; i->h = 0;
     i->region[0] = 0;
@@ -70,8 +70,8 @@ NK_API struct nk_nine_slice
 nk_nine_slice_ptr(void *ptr, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     NK_ASSERT(ptr);
     i->handle.ptr = ptr;
     i->w = 0; i->h = 0;
@@ -86,8 +86,8 @@ NK_API struct nk_nine_slice
 nk_nine_slice_id(int id, nk_ushort l, nk_ushort t, nk_ushort r, nk_ushort b)
 {
     struct nk_nine_slice s;
-    nk_zero(&s, sizeof(s));
     struct nk_image *i = &s.img;
+    nk_zero(&s, sizeof(s));
     i->handle.id = id;
     i->w = 0; i->h = 0;
     i->region[0] = 0;
